/*
 * $Id: ChangeLog,v 1.4726 2005/12/23 10:47:50 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-12-23 11:45 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbextern.ch
    + added: ORDWILDSEEK, WILDMATCH, RDDINFO

  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/rddord.prg
  * xharbour/source/rdd/workarea.c
    * formatting and some warning cleaning

  * xharbour/source/rtl/gtcrs/gtcrs.c
    * declared some functions as static

  * xharbour/source/vm/hvm.c
    ! fixed problem caused by += optimization used ofr array items

2005-12-22 07:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * correct ch handling in SpecialHandling

2005-12-22 10:20 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/rtl/tget.prg
    * fixed extra spaces bug in picture

2005-12-21 11:28 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    + Added missing error handling

2005-12-21 01:28 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Exported CreateOleObject() and ReleaseOleObject()
    * Minor correction

2005-12-21 00:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * MT mode is now truly for MSVC only (temporary)
    * reduced cpu idle calls

2005-12-20 01:25 UTC-0300 Walter Negro <anegro-AT-overnet.com.ar>
  * source/vm/errorapi.c
    ! Fix, release idle fence when use TRY or RECOVER

2005-12-20 02:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * bin/bld.bat
    * minor fixup for hbsx under bcc
  * source/rtl/gtwin/gtwin.c
    * for the moment, MT mode is for msvc only!

2005-12-20 14:40 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/win32prn.prg
    ! HB_FUNC_STATIC( SETDOCUMENTPROPERTIES )